--- a/public/css/users/otp3.css
+++ b/public/css/users/otp3.css
@@ -52,14 +52,8 @@ body {
     text-align: center;
 }
 
-.card img {
-    width: 80px;
-    height: 80px;
-    object-fit: contain;
-    margin-bottom: 15px;
-}
-
 .card p {
+    margin-top: 10px;
     font-size: 14px;
     color: #444;
     margin-bottom: 20px;
